--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "weather",
-  "version": "1.0.0",
-  "description": "Dannicser",
-  "main": "index.js",
+  "name": "weather-forecast-sli",
+  "version": "1.0.11",
+  "description": "Getting weather forecast using console",
+  "main": "weather.js",
   "bin": {
-    "weather": "index.js"
+    "weather": "weather.js"
   },
+  "keywords": [
+    "weather",
+    "cli",
+    "weather forecast"
+  ],
   "type": "module",
   "scripts": {},
-  "author": "",
+  "author": "Dannicser",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dannicser/weather-sli"
+  },
   "dependencies": {
     "axios": "^1.6.8",
     "chalk": "^5.3.0"
